# python-srm-decode

./: README.md  setup.cfg  srmdecode.py
srmdecode/: __init__.py  decoder.py
tests/: test_srmx.py
tests/files/: pc7-case1.srm  srmx-exported-case1.csv
