[metadata]
name = srmdecode
version = 0.0.1
description =  Python library for SRM .SRM file decode.
long_description = file: README.md
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
author = Hiroyuki OYAMA
author_email = hiroyuki.oyama@japanhpc.com

[options]
package_dir=
    = .
packages=find:
include_package_data = False

[options.packages.find]
where=.

